--- a/style.css
+++ b/style.css
@@ -7,3 +7,35 @@
 .bara-navegacion{
     background-color: #1b5e20;
 }
+
+.card-img-wrapper{
+    border-radius: 0.5rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.card-img-custom{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border: 0.5rem;
+    display: block;
+/* para el degradado de la imagen */
+    position: relative;
+    z-index: 1;
+}
+
+.card-img-wrapper::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 0.5rem;
+    background: linear-gradient(135deg, rgba(0,0,0,0.15) 0%, rgba(255,255,255,0.10) 100%);
+    z-index: 2;
+    pointer-events: none; /* Permite que los eventos del mouse pasen a la imagen */
+}
+
+.tarjeta_color{
+     background-color: #d4edda;
+  border: none;
+}
