--- a/style.css
+++ b/style.css
@@ -110,3 +110,20 @@
 .body-fade-in.loaded {
     opacity: 1;
 }
+
+.boton_subir{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #1b5e20;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 24px rgba(44, 62, 80, 0.18);
+    cursor: pointer;
+}
